chore: update build